# cli

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: master-prompt.md
docs/: api-reference.md  architecture.md  brand-guide.md  cli-reference.md  design-spec.md  getting-started.md  homebrew.md  open-source-release.md  orchestration-guide.md  release-strategy.md  troubleshooting.md
scripts/: release-preflight.sh  render-homebrew-formula.sh  sync-homebrew-tap.sh  update-homebrew-stable.sh
src/: agent.rs  main.rs  meta.rs  prompt.rs  tmux.rs
src/cmd/: ctl.rs  mod.rs  service.rs  task.rs  team.rs
src/web/: mod.rs
static/: index.html
