[package]
name = "crewmux"
version = "0.2.0"
edition = "2021"
default-run = "crewmux"
description = "CrewMux - manage AI agent teams via tmux"

[[bin]]
name = "crewmux"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
anyhow = "1"
dirs = "5"

# Web UI
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2"
